Fix font color of search bar in dark mode

--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -35,6 +35,7 @@
 .search-bar--dark {
   &.ui.input > input {
     background-color: #1f1f1f;
+    color: white;
     @include default-search-bar-styles;
   }
 
